--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
 	<title>Test Project</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width", initial-scale=1.0>
 	<link rel="stylesheet" type="text/css" href="assets/styles/reset.css">
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/styles/styles.css">
+	
 </head>
 <body>
 	<!-- start container -->
@@ -67,7 +69,7 @@
 						<h1>About Me</h1>
 						<hr>
 						<p>
-						<img src="assets/images/nickherrera.jpg">
+						<img id="image-main" src="assets/images/nickherrera.jpg">
 						Hi! My name is Nick Herrera and I am building this portfolio in order to advance my career in web development and marketing services. After graduating with a degree in Business Administration from Pittsburg State University in 2011, I have been working in the marketing industry and have been gaining knowledge that has helped me bring quality work to my company as well as my clients. As a lifelong learner, I value the importance of coding and web development and think it can become a valuable tool for my career moving forward.</p>
 
 
@@ -95,26 +97,26 @@
 				<div class="col-md-3">
 					<div class="border-main">
 						<div class="row content">
-							<h2>Connect</h2>
+							<h2>Connect with Me</h2>
 								<hr>
 						</div>
 
 					<!-- Social Icons -->
 						<div class="row content">
-							<div class="col-md-4">
+							<div class="col-sm-4">
 								<a href="https://github.com/">
 								<img class="icon" id="github" src="assets/images/github.png" alt="git hub">
 								</a>
 							</div>
 
-							<div class="col-md-4">
+							<div class="col-sm-4">
 								<a href="https://www.linkedin.com/in/nicholasmherrera/">
 								<img class="icon" id="linkedin" src="assets/images/linkedin.png" alt="Linkedin">
 								</a>
 
 							</div>
 
-							<div class="col-md-4">
+							<div class="col-sm-4">
 								<a href="https://stackoverflow.com/users/8506113/nick-herrera?tab=profile">
 								<img class="icon" id="stackoverflow" src="assets/images/stackoverflow.png" alt="Stack Overflow">
 								</a>
