--- a/portfolio.html
+++ b/portfolio.html
@@ -139,26 +139,26 @@
 				<div class="col-md-3">
 					<div class="border-main">
 						<div class="row content">
-							<h2>Connect</h2>
+							<h2>Connect with Me</h2>
 								<hr>
 						</div>
 
 					<!-- Social Icons -->
 						<div class="row content">
-							<div class="col-md-4">
+							<div class="col-sm-4">
 								<a href="https://github.com/">
 								<img class="icon" id="github" src="assets/images/github.png" alt="git hub">
 								</a>
 							</div>
 
-							<div class="col-md-4">
+							<div class="col-sm-4">
 								<a href="https://www.linkedin.com/in/nicholasmherrera/">
 								<img class="icon" id="linkedin" src="assets/images/linkedin.png" alt="Linkedin">
 								</a>
 
 							</div>
 
-							<div class="col-md-4">
+							<div class="col-sm-4">
 								<a href="https://stackoverflow.com/users/8506113/nick-herrera?tab=profile">
 								<img class="icon" id="stackoverflow" src="assets/images/stackoverflow.png" alt="Stack Overflow">
 								</a>
